--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_field :name, autofocus: true, class: "form-control", id: "exampleFormControlInput1", required: true %>
     </div>
     <div class="m-1">
-      <%= f.label "場所" %><br>
+      <%= f.label "住所" %><br>
       <%= f.text_field :address, autofocus: true, class: "form-control", id: "exampleFormControlInput1", required: true %>
     </div>
     <div class="m-1">
