--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.link {
+  color: #4682B4;
+  transition: color .3s;
+}
+
+.link:hover {
+  color: #BAD3FF;
+  text-decoration: none;
+}
+
+.profile {
+  padding: 15px;
+}
+
+.introduction {
+  padding: 15px;
+  color: #555555;
+}
+
+
