--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container my-5 wf-mplus1p">
   <div class="m-2">
-    <%= link_to user_path(@post.user.id) do %>
+    <%= link_to user_path(@post.user.id), class:"post_link" do %>
       <%= attachment_image_tag @post.user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"70x70", class: "profile_image" %>
       <%= @post.user.name %></br>
     <% end %>
@@ -10,13 +10,13 @@
   <% if user_signed_in? %>
     <% if @post.liked_by?(current_user) %>
       <p>
-        <%= link_to post_likes_path(@post), method: :delete do %>
+        <%= link_to post_likes_path(@post), method: :delete, class:"like" do %>
           ♥<%= @post.likes.count %>
         <% end %>
       </p>
     <% else %>
       <p>
-        <%= link_to post_likes_path(@post), method: :post do %>
+        <%= link_to post_likes_path(@post), method: :post, class:"like" do %>
           ♡<%= @post.likes.count %>
         <% end %>
       </p>
