--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,18 +4,22 @@
       <div class="col-sm-4">
         <%= attachment_image_tag @user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"200x200", class: "profile_image"%>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-8 mt-5">
         <%= f.label"プロフィール画像を変更" %>
         <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
       </div>
     </div>
     <div class="m-1">
       <%= f.label"ユーザーネーム" %>
-      <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム", class: "form-control", id: "exampleFormControlInput1"%>
+      <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム", class: "form-control", id: "exampleFormControlInput1", required: true%>
     </div>
     <div class="m-1">
       <%= f.label"メールアドレス" %>
-      <%= f.email_field :email, autofocus: true, placeholder:"email", class: "form-control", id: "exampleFormControlInput1"%>
+      <%= f.email_field :email, autofocus: true, placeholder:"メールアドレス", class: "form-control", id: "exampleFormControlInput1", required: true%>
+    </div>
+    <div class="m-1">
+      <%= f.label"自己紹介" %>
+      <%= f.text_area :introduction, autofocus: true, placeholder:"自己紹介", class: "form-control", id: "exampleFormControlInput1"%>
     </div>
     <div class="mt-4 mb-3 mx-1">
       <%= f.submit "変更を保存", class: "btn btn-outline-info" %>
