--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -4,12 +4,11 @@
   </div>
   <div class="row">
     <% @users.each do |user| %>
-      <div class="one-post card col-4">
-        <%= link_to user_path(user) do %>
+      <div class="col-4">
+        <%= link_to user_path(user), class:"link" do %>
           <h5 class="caption"><%= user.name %></h5>
           <div class="d-flex">
             <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "icon.jpg", class: "mb-3 mt-3 ml-3 profile-image" %>
-            <p class="ml-5"><%#= user.profile %></p>
           </div>
           <p class="caption"><%= "#{user.posts.count} 投稿" %></p>
         <% end %>
