--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,45 +1,44 @@
 <div class="container wf-mplus1p">
   <div class="row">
-		<div class="col-sm-2">
+		<div class="col-sm-6 col-md mt-2">
 			<%= attachment_image_tag @user, :profile_image, fallback: "icon.jpg", size:'100x100', class: "profile_image" %>
 		</div>
-		<div class="col-sm-6 xxx" style="padding-top: 30px;">
+		<div class="col-sm-6 col-md mt-2 profile">
 			<%= @user.name %>
 			<% if current_user ==@user %>
-			  <%= link_to "プロフィールを編集", edit_user_path(@user.id), class: "btn btn-outline-secondary btn-sm" %></br>
-			<% end %>
-      <%= link_to follows_user_path(@user) do %>
+			  <%= link_to "プロフィールを編集", edit_user_path(@user.id), class: "btn btn-outline-secondary btn-sm" %>
+			<% end %><br>
+      <%= link_to follows_user_path(@user), class:"link" do %>
         <span>フォロー<%= @following_users.count %></span>
       <% end %>
-      <%= link_to followers_user_path(@user) do %>
-        <span>フォロワー<%= @follower_users.count %></span>
+      <%= link_to followers_user_path(@user), class:"link" do %>
+        <span>フォロワー<%= @follower_users.count %></span><br>
       <% end %>
-		</div>
-		<div class="col-sm-4">
 		  <% if user_signed_in? %>
   		  <% if current_user != @user %>
           <% if current_user.following?(@user) %>
-            <%= link_to 'フォローを外す', user_relationship_path(@user.id), method: :delete, class: "btn-sm btn-danger" %>
+            <%= link_to 'フォローを外す', user_relationship_path(@user.id), method: :delete, class: "btn btn-outline-danger btn-sm" %>
           <% else %>
-            <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn-sm btn-success" %>
+            <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn btn-outline-success btn-sm" %>
           <% end %>
         <% end %>
       <% end %>
 		</div>
+		<div class="col-sm col-md-7 m-2 introduction">
+		  <%= @user.introduction %>
+		</div>
   </div>
 </div>
-<div class="container my-4 py-4 border-top">
-  <div class="columns is-multiline">
+<div class="container my-4 py-4 border-top wf-mplus1p">
+  <div class="row">
     <% if @posts.empty? %>
       <p>投稿がありません</p>
     <% else %>
       <% @posts.each do |post| %>
-        <div class="column is-4">
-          <figure class="image is-4by3">
+        <div class="col-4 my-3">
             <%= link_to post_path(post.id) do %>
-              <%= attachment_image_tag post, :image, :fill, 300, 300 %>
+              <%= attachment_image_tag post, :image, :fill, 300, 300, class:"w-100" %>
             <% end %>
-          </figure>
         </div>
       <% end %>
     <% end %>
