[Fix]レイアウト調整

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,7 @@
         <%= image_tag 'top1.jpg', class: "d-block w-100" %>
         <div class="carousel-caption d-none d-sm-block">
           <p>愛犬とのくらしを</p>
-          <p>もっと楽しむ</p>
+          <p>楽しむ</p>
         </div>
       </div>
       <div class="carousel-item">
@@ -37,7 +37,7 @@
       </a>
     </div>
   </div>
-</div>  
+</div>
 <div class="container wf-mplus1p">
   <h2 class="m-3 slogan">~愛犬とのくらしをもっと豊かに~</h2>
 </div>
